crates/vouched/tests/ui/vouched/missing_validations.rs
use vouched::Vouched;

#[derive(Vouched)]
struct Name(String);

fn main() {}
